# osgEffect

./: CMakeLists.txt
data/: house.mtl
examples/: CMakeLists.txt
examples/osgComposeViewer/: CMakeLists.txt  osgComposeViewer.cpp
examples/osgEffectViewer/: CMakeLists.txt  osgEffectViewer.cpp
examples/osgSufaceMaterialViewer/: CMakeLists.txt  osgSufaceMaterialViewer.cpp
include/osgEFT/: Coord  EffectManager  Export  Frustrum  NFX  Pass  PassUpdater  Target  Utils
src/: CMakeLists.txt
src/osgEFT/: CMakeLists.txt  EffectManager.cpp  NFX.cpp  Pass.cpp  PassUpdater.cpp  Target.cpp  Utils.cpp
