SET(NIUBI_SETUP_TARGET_NAME osgComposeViewer)

SET(NIUBI_SETUP_HEADERS
)

SET(NIUBI_SETUP_SOURCES
    osgComposeViewer.cpp
)


INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(AFTER ${OSG_INCLUDE_DIR})


NIUBI_SETUP_EXECUTABLE(ON)
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME} 
    ${OPENGL_LIBRARIES}
    optimized ${OPENTHREADS_LIBRARY}    debug ${OPENTHREADS_LIBRARY_DEBUG}
    optimized ${OSG_LIBRARY}            debug ${OSG_LIBRARY_DEBUG} 
    optimized ${OSGDB_LIBRARY}          debug ${OSGDB_LIBRARY_DEBUG} 
    optimized ${OSGUTIL_LIBRARY}        debug ${OSGUTIL_LIBRARY_DEBUG}
    optimized ${OSGGA_LIBRARY}          debug ${OSGGA_LIBRARY_DEBUG} 
    optimized ${OSGVIEWER_LIBRARY}      debug ${OSGVIEWER_LIBRARY_DEBUG} 
    osgEFT
    )
NIUBI_SETUP_INSTALL()



